# rust-embedded-w5100-driver

./: Cargo.toml  Embed.toml  README.md
.cargo/: config.toml
src/: main.rs
